--- a/modules/admin_manual/pages/configuration/server/config_sample_php_parameters.adoc
+++ b/modules/admin_manual/pages/configuration/server/config_sample_php_parameters.adoc
@@ -409,6 +409,10 @@ For more information about the impact of the values see:
 https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Set-Cookie/SameSite#values and
 https://web.dev/schemeful-samesite/
 
+* Use 'strict' whenever possible
+* If necessary relax to 'lax'
+* Use 'none' if it needs to be relaxed even further
+
 ==== Code Sample
 
 [source,php]
