--- a/modules/admin_manual/partials/nav.adoc
+++ b/modules/admin_manual/partials/nav.adoc
@@ -15,6 +15,7 @@
 ****** xref:admin_manual:installation/manual_installation/manual_installation.adoc[Install ownCloud on Ubuntu 20.04]
 ***** Quick Installation Guide
 ****** xref:admin_manual:installation/quick_guides/ubuntu_20_04.adoc[Quick Install ownCloud on Ubuntu 20.04]
+****** xref:admin_manual:installation/quick_guides/ubuntu_22_04.adoc[Quick Install on Ubuntu 22.04]
 ***** Linux Package Manager
 ****** xref:admin_manual:installation/linux_packetmanager_install.adoc[Linux Package Manager Installation]
 **** xref:admin_manual:installation/installation_wizard.adoc[The Installation Wizard]
