--- a/modules/admin_manual/pages/configuration/user/oidc/ms-azure-setup.adoc
+++ b/modules/admin_manual/pages/configuration/user/oidc/ms-azure-setup.adoc
@@ -39,6 +39,8 @@ image:configuration/user/oidc/ms-azure-ad/new-registration-ms-azure-ad.png[width
 +
 image:configuration/user/oidc/ms-azure-ad/provide-required-information-ms-azure-ad.png[width=400]
 
+. Go to menu:Authentication[Add a platform] and select Web in Web application.
+
 . Go to menu:Authentication[Configure Web > Redirect URI] and setup your Redirect URI.
 +
 image:configuration/user/oidc/ms-azure-ad/setup-redirect-url-ms-azure-ad.png[width=600]
