--- a/modules/admin_manual/pages/configuration/server/caching_configuration.adoc
+++ b/modules/admin_manual/pages/configuration/server/caching_configuration.adoc
@@ -60,11 +60,11 @@ php -r 'phpinfo();' | grep opcache.enable
 
 === APCu
 
-The easiest cache to use is APCu, because it is a data cache, very fast and nothing needs to be configured. APCu can not be used when needed to run on an external server.
+The easiest cache to use is APCu, because it is a pure data cache, very fast as it is memory based only and _nothing needs to be configured_. APCu can not be used, when needed to run on an external server like in a distributed environment.
 
 ==== Installing APCu
 
-On Ubuntu/Debian/Mint systems:
+On Ubuntu/Debian/Mint systems, if not already done:
 [source,bash]
 ----
 sudo apt install php-apcu
@@ -77,15 +77,21 @@ With that done, assuming that you don’t encounter any errors, restart Apache a
 {redis_url}[Redis] is an excellent modern memory cache to use for both distributed caching and as a local cache for
 xref:configuration/files/files_locking_transactional.adoc[transactional file locking], because it guarantees that cached objects are available for as long as they are needed.
 
-The performance of Redis when used with a socket connection is close to the performance of APCu.
+The performance of Redis when used with a socket connection can get close to the performance of APCu.
 
 NOTE: The Redis PHP module must be at least version 2.2.6 or higher.
 
-NOTE: The default shipped Redis version and the php-redis extension for Ubuntu 20.04 is 5.x. With Redis version 6, a new authentication mechanism has been introduced named ACL (Access Control Lists). ownCloud does not currently support Redis ACL´s, but does support the password protection available with current Redis versions.
+[NOTE]
+====
+* For Ubuntu 20.04, the default shipped Redis Server version and the php-redis extension is 5.x.
+* For Ubuntu 22.04, the default shipped Redis Server version is 6.0.16.
+* For Ubuntu 22.04, the php7.4-redis extension has version 5.3.x.
+* With Redis version 6, a new authentication mechanism has been introduced named ACL (Access Control Lists). ownCloud does currently not support Redis ACL´s, but does support the password protection, available with current Redis versions.
+====
 
 ==== Installing Redis
 
-If you have Ubuntu 16.04 or higher:
+On Ubuntu/Debian/Mint systems, if not already done:
 
 [source,bash]
 ----
@@ -96,9 +102,17 @@ The installer will automatically launch Redis and configure it to launch at star
 
 After that, assuming that you don’t encounter any errors, restart Apache and the extension is ready to use.
 
+==== Redis Performance Consideration
+
+* Because Redis writes data to disk, it is recommended to use a high performance backend like SSD.
+* If you do not have a distributed environment where the Redis server is installed at a different server, you can configure Redis to be xref:redis-configuration-using-unix-sockets[socket based] instead TCP based to xref:redis-performance-comparison-tcp-vs-socket[increase performance].
+
 ==== Additional notes for Redis vs. APCu on Memory Caching
 
-APCu is faster at local caching than Redis. If you have enough memory, use APCu for memory caching and Redis for file locking. If you are low on memory, use Redis for both.
+* APCu is faster at local caching than Redis when using TCP, as APCu is memory based only.
+* If you have enough memory, use APCu for in memory caching and Redis for file locking.
+* If you are limited in memory or only want to have one caching backend, use Redis for both.
+* Consider using sockets instead of TCP when you decide on Redis but do not have a distributed caching environment.
 
 ==== Clearing the Redis Cache
 
@@ -145,8 +159,10 @@ NOTE: The installer will automatically start `memcached` and configure it to lau
 [cols=",",options="header",]
 |===
 | PHP Version | Filename
-| {minimum-php-printed} | `/etc/php/{minimum-php-version}/mods-available/memcached.ini`
+| {recommended-php-version} | `/etc/php/{recommended-php-version}/mods-available/memcached.ini`
 |===
+
+Note that the PHP version depends on your envoronment.
 
 After that, assuming that you don’t encounter any errors:
 
@@ -194,9 +210,9 @@ With that done, refresh your ownCloud admin page, and the cache warning should d
 
 === Redis Configuration
 
-Redis is very configurable; consult {redis_doc_url}[the Redis documentation] to learn more.
+Redis is very configurable; consult the {redis_doc_url}[Redis documentation] to learn more.
 
-Regardless of whether you have setup Redis to use TCP or a Unix socket, we recommend adding the following for best performance. This enables External Transactional File Locking based on Redis:
+Regardless of whether you have setup Redis to use TCP or a Unix socket, we recommend adding the following for best performance. This enables xref:configure-transactional-file-locking[External Transactional File Locking] based on Redis:
 
 [source,php]
 ----
@@ -213,18 +229,78 @@ The following example `config.php` configuration connects to a Redis cache via T
 ----
 'memcache.local' => '\OC\Memcache\Redis',
 'redis' => [
-    'host' => 'localhost',       // For a Unix domain socket, use '/var/run/redis/redis.sock'
-    'port' => {std-port-redis},  // Set to 0 when using a Unix socket
-    'timeout' => 0,              // Optional, keep connection open forever
-    'password' => '',            // Optional, if not defined no password will be used.
-    'dbindex' => 0,              // Optional, if undefined SELECT will not run and will
-                                 // use Redis Server's default DB Index.
+    'host' => 'localhost',  // For a Unix domain socket, use '/var/run/redis/redis.sock'
+    'port' => {std-port-redis},         // Set to 0 when using a Unix socket
+    'timeout' => 0,         // Optional, keep connection open forever
+    'password' => '',       // Optional, if not defined no password will be used.
+    'dbindex' => 0,         // Optional, if undefined SELECT will not run and will
+                            // use Redis Server's default DB Index.
 ],
 ----
 
 ==== Redis Configuration Using Unix Sockets
 
-If Redis is running on the same server as ownCloud, it is recommended to configure it to use Unix sockets. Then, configure ownCloud to communicate with Redis as in the following example. 
+If Redis is running on the same server as ownCloud, it is recommended to configure it to use Unix sockets for increased performance. Follow these steps to do so:
+
+. Make the `redis` user a member of the `www-data` group:
++
+[source,bash]
+----
+sudo usermod -g www-data redis
+----
+
+. Create your redis folder that the unix socket will be in:
++
+[source,bash]
+----
+sudo mkdir -p /var/run/redis/
+----
+
+. Set the permissions so the redis user and www-data group own it:
++
+[source,bash]
+----
+sudo chown -R redis:www-data /var/run/redis
+----
+
+. Open an editor of your choice and change/add the following parameters to the redis config. Note that in the example, `vi` is used as editor:
++
+[source,bash]
+----
+sudo vi /etc/redis/redis.conf
+----
++
+[source,plaintext]
+----
+# create a unix domain socket to listen on
+unixsocket /var/run/redis/redis.sock
+
+# set permissions for the socket
+unixsocketperm 770
+----
+
+. Restart Redis to make the changes effective:
++
+[source,plaintext]
+----
+sudo service redis-server restart
+----
+
+. Check if the Redis unix socket was created:
++
+[source,plaintext]
+----
+ls -lh /var/run/redis
+----
++
+The output should be like the following:
++
+[source,plaintext]
+----
+srwxrwx--- 1 redis redis 0 May 12 12:26 redis.sock
+----
+
+Then, configure ownCloud to communicate with Redis socket as in the following example. 
 
 [source,php]
 ----
@@ -232,18 +308,14 @@ If Redis is running on the same server as ownCloud, it is recommended to configu
 'memcache.local' => '\OC\Memcache\Redis',
 'redis' => [
     'host' => '/var/run/redis/redis.sock',
-    'port' => 0,
-    'password' => '',            // Optional, if not defined no password will be used.
-    'dbindex' => 0,              // Optional, if undefined SELECT will not run and will
-                                 // use Redis Server's default DB Index.
+    'port' => 0,       // Set to 0 when using a Unix socket
+    'password' => '',  // Optional, if not defined no password will be used.
+    'dbindex' => 0,    // Optional, if undefined SELECT will not run and will
+                       // use Redis Server's default DB Index.
 ],
 ----
 
-If setting up Redis to be accessed via a Unix socket from a webserver user, then consider the following:
-
-. Make the webserver user `www-data` member of the group `redis` in `/etc/group`, e.g.,
-  `redis:x:110:www-data`
-. In your Redis configuration (`/etc/redis/redis.conf`) set `unixsocketperm` to `770`
+==== Redis Performance Comparison TCP vs Socket
 
 To see a benchmark comparison, run:
 
@@ -256,7 +328,7 @@ sudo redis-benchmark -s /var/run/redis/redis-server.sock -q -n 100000
 In the following table, you will see an example gain of about +20% when using sockets compared
 to TCP on localhost. The values can differ in your environment. Please do a local check.
 
-[width="70%",cols="20%,30%,30%,20%",options="header",]
+[width="80%",cols="20%,30%,30%,20%",options="header",]
 |===
 | Test
 | TCP (requests/s)
@@ -368,50 +440,10 @@ This example uses APCu for the local cache, Memcached as the distributed memory 
  ],
 ----
 
-=== Configuration Recommendations Based on Type of Deployment
-
-==== Small/Private Home Server
-
-[source,php]
-----
-// Only use APCu
-'memcache.local' => '\OC\Memcache\APCu',
-----
-
-==== Small Organization, Single-server Setup
-
-Use APCu for local caching, Redis for file locking
-
-[source,php,subs="attributes+"]
-----
-'memcache.local' => '\OC\Memcache\APCu',
-'memcache.locking' => '\OC\Memcache\Redis',
-'redis' => [
-    'host' => 'localhost',
-    'port' => {std-port-redis},
-],
-----
-
-==== Large Organization, Clustered Setup
-
-Use Redis for everything except a local memory cache. Use the server’s IP address or hostname so that it is accessible to other hosts:
-
-[source,php,subs="attributes+"]
-----
-'memcache.distributed' => '\OC\Memcache\Redis',
-'memcache.locking' => '\OC\Memcache\Redis',
-'memcache.local' => '\OC\Memcache\APCu',
-'redis' => [
-    'host' => 'server1',      // hostname example
-    'host' => '12.34.56.78',  // IP address example
-    'port' => {std-port-redis},
-],
-----
-
 == Configure Transactional File Locking
 
 xref:configuration/files/files_locking_transactional.adoc[Transactional File Locking]
-prevents simultaneous file saving. It is enabled by default and uses the database to store the locking data. This places a significant load on your database. It is recommended to use a cache backend instead. You have to configure it in `config.php` as in the following example, which uses Redis as the cache backend:
+prevents simultaneous file saving. It is enabled by default and uses the database to store the locking data. This places a significant load on your database. It is recommended to use a cache backend instead. You have to configure it in `config.php` as in the following example, which uses Redis TCP as the cache backend:
 
 [source,php,subs="attributes+"]
 ----
@@ -426,6 +458,69 @@ prevents simultaneous file saving. It is enabled by default and uses the databas
 ----
 
 CAUTION: For enhanced security, it is recommended to configure Redis to require a password. See {redis_security_url} for more information.
+
+
+== Configuration Recommendations Based on Type of Deployment
+
+The examples give you an overview, adapt them to your environment and your needs.
+
+=== Private Home Server With Low Access Rates
+
+Use APCu for local caching, file locking is not mandatory.
+
+[source,php]
+----
+'memcache.local' => '\OC\Memcache\APCu',
+----
+
+=== Small Server
+
+Use APCu for local caching and Redis for file locking.
+
+[source,php,subs="attributes+"]
+----
+'filelocking.enabled' => true,
+'memcache.local' => '\OC\Memcache\APCu',
+'memcache.locking' => '\OC\Memcache\Redis',
+'redis' => [
+    'host' => 'localhost',
+    'port' => {std-port-redis},
+],
+----
+
+=== Small Organization, Single-server Setup
+
+Use Redis Socket for local caching and for file locking.
+
+[source,php,subs="attributes+"]
+----
+'filelocking.enabled' => true,
+'memcache.local' => '\OC\Memcache\Redis',
+'memcache.locking' => '\OC\Memcache\Redis',
+'redis' => [
+    'host' => '/var/run/redis/redis.sock',
+    'port' => 0,
+],
+----
+
+=== Large Organization, Clustered Setup
+
+Use Redis for everything except a local memory cache. Use the server’s IP address or hostname so that it is accessible to other hosts:
+
+[source,php,subs="attributes+"]
+----
+'filelocking.enabled' => true,
+'memcache.distributed' => '\OC\Memcache\Redis',
+'memcache.locking' => '\OC\Memcache\Redis',
+'memcache.local' => '\OC\Memcache\APCu',
+'redis' => [
+    'host' => 'server1',      // hostname example
+    'host' => '12.34.56.78',  // IP address example
+    'port' => {std-port-redis},
+],
+----
+
+See xref:configuration/server/config_sample_php_parameters.adoc#define-redis-cluster-connection-details[Define Redis Cluster connection details] when using a Redis clustered setup.
 
 == Caching Exceptions
 
