--- a/modules/admin_manual/pages/configuration/server/background_jobs_configuration.adoc
+++ b/modules/admin_manual/pages/configuration/server/background_jobs_configuration.adoc
@@ -4,6 +4,7 @@
 :cron_url: https://en.wikipedia.org/wiki/Cron
 :crontab_url: https://linux.die.net/man/1/crontab
 :systemd_url: https://wiki.archlinux.org/index.php/Systemd/Timers
+:oc-docker-url: https://github.com/owncloud-docker/base#environment-variables
 
 == Introduction
 
@@ -22,9 +23,9 @@ As an example:
 
 Is the same as using the *Cron* section on your ownCloud Admin page.
 
-=== Docker note
+=== Docker Note
 
-If you are using the official docker images you don't need to take care about the configuration for background jobs, the docker image is already configured to use cron internally. If required this can also be adjusted by the environment variables OWNCLOUD_CROND_ENABLED and OWNCLOUD_CROND_SCHEDULE, see https://github.com/owncloud-docker/base#environment-variables.
+If you are using the official docker images you don't need to take care about the configuration for background jobs, the docker image is already configured to use cron internally. If required, this can also be adjusted by the {oc-docker-url}[environment variables] `OWNCLOUD_CROND_ENABLED` and `OWNCLOUD_CROND_SCHEDULE`.
 
 == Cron Jobs
 
