--- a/modules/admin_manual/partials/installation/manual_installation/useful_tips.adoc
+++ b/modules/admin_manual/partials/installation/manual_installation/useful_tips.adoc
@@ -153,7 +153,15 @@ WantedBy=basic.target
 [source,bash]
 ----
 sudo systemctl daemon-reload
+----
+
+[source,bash]
+----
 sudo systemctl enable disable-thp
+----
+
+[source,bash]
+----
 sudo service disable-thp start
 ----
 --
