--- a/modules/admin_manual/pages/installation/manual_installation/server_prep_ubuntu_20.04.adoc
+++ b/modules/admin_manual/pages/installation/manual_installation/server_prep_ubuntu_20.04.adoc
@@ -24,6 +24,8 @@ The target audience for this document are experienced admins with additional nee
 
 IMPORTANT: PHP 8.0 is not currently supported by the ownCloud server.
 
+IMPORTANT: Read the xref:installation/manual_installation/manual_installation_prerequisites.adoc#openssl-version[openSSL Version] notes which are important when planning to use encryption.
+
 NOTE: The commands and links provided in this description should give you proper hints but we cannot take any responsibility.
 
 == Upgrading from Ubuntu 18.04 to 20.04
