occ custom groups

--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_config_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_config_commands.adoc
@@ -2,6 +2,13 @@
 
 The `config` commands are used to configure the ownCloud server.
 
+[NOTE]
+====
+* In general, key names are not checked for validity, they are used as written.
+* Whenever you use the *app* parameter, a config is read or written from or to the database. 
+* Whenever you use the *system* parameter, a config is read or written from or to the config.php file.
+====
+
 ----
 config
  config:app:delete      Delete an app config value
@@ -20,6 +27,7 @@ The following apps, core functions or documents use/refer to `config:app` settin
 
 .Standard
 * xref:configuration/files/federated_cloud_sharing_configuration.adoc[Configuring Federation Sharing]
+* xref:configuration/user/user_management.adoc#enabling-custom-groups[Custom Groups]
 * xref:configuration/files/file_sharing_configuration.adoc[File Sharing]
 * xref:configuration/server/security/hsmdaemon/index.adoc[The HSM (Hardware Security Module) Daemon (hsmdaemon)]
 * xref:configuration/server/legal_settings_configuration.adoc[Legal Settings Configuration]
@@ -39,6 +47,7 @@ The following apps, core functions or documents use/refer to `config:app` settin
 * xref:configuration/server/occ_command.adoc#anti-virus[occ Anti-Virus]
 * xref:configuration/server/occ_command.adoc#auditing[occ Auditing]
 * xref:configuration/server/occ_command.adoc#brute-force-protection[occ Brute Force Protection]
+* xref:configuration/server/occ_command.adoc#custom-groups[occ Custom Groups]
 * xref:configuration/server/occ_command.adoc#collabora-online-secure-view[occ Collabora Online / Secure View]
 * xref:configuration/server/occ_command.adoc#encryption[occ Encryption]
 * xref:configuration/server/occ_command.adoc#file-lifecycle-management[occ File Lifecycle Management]
@@ -50,7 +59,8 @@ The following apps, core functions or documents use/refer to `config:app` settin
 The following apps, core functions or documents use/refer to `config:system` settings:
 
 .Standard
-* xref:installation/quick_guides/ubuntu_20_04.adoc[Install ownCloud on Ubuntu 20.04]
+* xref:installation/quick_guides/ubuntu_20_04.adoc[Quick Install on Ubuntu 20.04]
+* xref:installation/quick_guides/ubuntu_22_04.adoc[Quick Install on Ubuntu 22.04]
 
 .occ Commands
 * xref:configuration/server/occ_command.adoc#metrics[occ Metrics]
