--- a/modules/admin_manual/pages/configuration/user/user_management.adoc
+++ b/modules/admin_manual/pages/configuration/user/user_management.adoc
@@ -171,7 +171,7 @@ To specify the disallowed groups, list them against the `customgroups.disallowed
 
 ==== Set Custom Group Admins 
 
-Setting custom group admins can only be done via the browser. In case the group-admin has left the company and you need to set a different one, you temporarily must allow the xref:disabling-administrators-from-administering-custom-groups[ownCloud instance admins] access to groups if disallowed before, set a one or more new group admins, and change the instance admin setting back.
+Setting Custom Group admins can only be done via the browser. In case the group admin has left the company and you need to set a different one, you temporarily must allow the xref:disabling-administrators-from-administering-custom-groups[ownCloud instance admins] access to groups if disallowed before, set one or more new group admins, and change the instance admin setting back.
 
 == Setting Storage Quotas
 
