--- a/modules/admin_manual/pages/configuration/files/encryption/encryption_configuration.adoc
+++ b/modules/admin_manual/pages/configuration/files/encryption/encryption_configuration.adoc
@@ -22,14 +22,14 @@ configuration/files/encryption_configuration.adoc
 
 == General Notes
 
-Since ownCloud 9.0, server-side encryption for local and remote storage can operate independently. This allows to encrypt a remote storage independent of the home storage on the ownCloud server.
+Since ownCloud 9.0, server-side encryption for local and remote storage can operate independently. This allows encrypting a remote storage independent of the home storage on the ownCloud server.
 
 NOTE: Starting with ownCloud 9.0 we support Authenticated Encryption for all newly encrypted files. 
 See {hackerone-url}[Exploiting unauthenticated encryption mode] for more technical information about the impact.
 
 For maximum security, make sure to configure external storage with menu:Check for changes[Never]. This will let ownCloud ignore new files not added via ownCloud. This way, a malicious external storage administrator cannot add new files to the storage without your knowledge. However, you may not use this setting _if_ your external storage is subject to legitimate external changes.
 
-ownCloud’s server-side encryption encrypts files stored on the ownCloud server and files on remote storage sites that are connected to your ownCloud server. Encryption and decryption are performed on the ownCloud server. All files sent to remote storage will be encrypted by the ownCloud server and decrypted before serving them to you or any of your users shared them with.
+ownCloud’s server-side encryption encrypts files stored on the ownCloud server and files on remote storage sites that are connected to your ownCloud server. Encryption and decryption are performed on the ownCloud server. All files sent to remote storage will be encrypted by the ownCloud server and decrypted before serving them to you or any users that you shared them with.
 
 [NOTE]
 ====
