--- a/modules/admin_manual/pages/configuration/user/user_auth_ldap.adoc
+++ b/modules/admin_manual/pages/configuration/user/user_auth_ldap.adoc
@@ -171,7 +171,7 @@ The number updates automatically after any changes.
 
 [IMPORTANT]
 ====
-No matter what search filter is given the app always add the value of the `User Display Name Field` (default `(displayName=*)`) to the filter so ensure that your users have this field otherwise the count will be 0.
+No matter what search filter is given, the app always adds the value of the `User Display Name Field` (default `(displayName=*)` ) to the filter to ensure that your users have this field, otherwise the count will be 0.
 ====
 
 Active Directory offers "_Recursive retrieval of all AD group memberships of a user_".
